<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress_horizontal"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:mpb_progressStyle="horizontal"
            app:mpb_useIntrinsicPadding="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_drawable"
            android:orientation="vertical"
            android:showDividers="end">

            <ImageView
                android:id="@+id/imageviewfordish"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_dish_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frDaily_dishName"
            android:theme="@style/TextView" />

        <EditText
            android:id="@+id/et_dish_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frDaily_desc"
            android:theme="@style/TextView" />

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_avail"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frDaily_avail" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/rounded_button"
                android:text="-" />

            <EditText
                android:id="@+id/et_avail"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/rounded_button"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frDaily_price" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="€" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>